# error-correction-DEPRECATED-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: app.pro  arduino.cpp  arduino.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
arduino/: arduino.ino
config/: Config.h.in
data_transmission_raspberry/Emisor/: test.py
fec/turbocode/: block.cpp  block.h  decodercostmatrix.cpp  decodercostmatrix.h  decoderscheme.cpp  decoderscheme.h  interleaver.h  main.cpp  rsc_template.tex  rscdecoder.cpp  rscdecoder.h  rscencoder.cpp  rscencoder.h  turbocode.pro  utils.h
forward_error_correction/simulator/: data.h  mainwindow.ui
forward_error_correction/turbocode/: block.cpp  block.h  decodercostmatrix.cpp  decoderscheme.cpp  decoderscheme.h  interleaver.cpp  rsc_template.aux  rsc_template.tex  rscdecoder.cpp  rscencoder.cpp  utils.h
forward_error_correction/turbocode2/: Main.cpp  MatrixInterleaver.h  NscEncoder.h  ParityPuncturing.h  PermutationInterleaver.h  RscEncoder.h  Utils.h  VectorPuncturing.h
include/: CMakeLists.txt  catch.hpp
raspberry_test/Receptor/: record.py
rasperry_test/Receptor/: prueba_te.py
simulator/: data.cpp  data.h  datastream.cpp  datastream.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulator.pro  utils.cpp  utils.h
src/: CMakeLists.txt  main.cpp  speed_test.cpp
src/FEC/: Channel.h  DataBlock.cpp  DataBlock.h  DataBlock.tcc  Decoder.h  Encoder.h  Pipe.cpp  Pipe.h  Pipe.tcc
src/FEC/Modules/: Module.cpp  Module.h  Module.tcc
src/FEC/Modules/Channels/: Channel.h
src/FEC/Modules/Decoders/: Decoder.h
src/FEC/Modules/Encoders/: Encoder.h  RSCEncoder.cpp  RSCEncoder.h  TurboEncoder.cpp  TurboEncoder.h
src/FEC/Modules/Interleavers/: BlockInterleaver.cpp  BlockInterleaver.h
src/FEC/Modules/Interleaves/: BlockInterleaver.h  BlockInterleaver.tcc  Interleaver.h
src/FEC/Modules/Sinks/: Sink.h
src/FEC/Modules/Sources/: RandomSource.cpp  RandomSource.h  RandomSource.tcc  Source.cpp  Source.h  Source.tcc
src/FEC/Modules/Utils/: Printer.cpp  Printer.h  Printer.tcc  StatValue.cpp  StatValue.h
src/encoder/: RSC.cpp  RSC.h  Transition.cpp  Transition.h  Viterbi.cpp  Viterbi.h
src/other/: CMatrix.cpp  CMatrix.h  common.cpp  common.h
test/: CMakeLists.txt  test_channel.cpp  test_datablock.cpp  test_decoder.cpp  test_encoder.cpp  test_interleavers.cpp
tests/: CMakeLists.txt  rsc_tests.cpp
tests/tests/basic_tests/: rsc_tests.cpp
tests/tests/speed_tests/: encoder_speed.cpp
